# x-admin

./: .env  .gitignore  Cargo.toml  README.md  api.http  db.sql
src/: main.rs
src/common/: date_format.rs  db.rs  error.rs  jwt.rs  mod.rs  redis.rs  req.rs  res.rs
src/mid/: api_log.rs  auth.rs  mod.rs
src/model/: app.rs  menu.rs  mod.rs  role.rs  role_menu.rs  user.rs  user_role.rs
src/route/: app.rs  menu.rs  mod.rs  role.rs  user.rs
tests/: date_test.rs  http_test.rs  pwd_test.rs
web/: .env  .env.development  bun.lockb  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/mock/: menu.ts  role.ts  user.ts
web/src/: main.ts  permission.ts
web/src/layouts/components/: Header.vue  LayoutContent.vue  SideNav.vue
web/src/pages/: 404.vue  home.vue  log.vue  login.vue  menu.vue  role.vue  user_info.vue
web/src/pages/sys/: log.vue  menu.vue  role.vue  user.vue
web/src/router/: index.ts
web/src/store/modules/: permission.ts  tabs-router.ts  user.ts
web/src/utils/: permission.ts  request.ts
web/src/utils/route/: constant.ts  index.ts
