[package]
name = "x-admin"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'   # 调整优化等级
lto = true        # 链接时优化
codegen-units = 1 # 调整并行代码生成单元数量，默认16个

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
time = { version = "0.3.36", features = ["macros"] }
tokio = { version = "1.41.1", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [
    "local-time",
    "env-filter",
] }
thiserror = "2.0.3"
axum-extra = "0.9.4"
anyhow = "1.0.93"
sqlx = { version = "0.8.2", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
    "time",
] }
once_cell = "1.20.2"
md-5 = "0.10.6"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
redis = { version = "0.27.5", features = ["tokio-comp"] }
bb8 = "0.8.6"
bb8-redis = "0.17.0"
